--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -130,9 +130,9 @@ on post-fs-data
 
 service qfp-boot /vendor/etc/qfp_boot.sh
     class late_start
-    user root
-    group root
+    group system
     oneshot
+
 
 service qfp-daemon /vendor/bin/qfp-daemon
     class late_start
