x2: init: move qfp-related parts to x2
* zl1 doesn't use these paths
* While we're at it, move on post-fs-data before boot as it
  gets triggered first
https://github.com/LineageOS/android_system_core/blob/lineage-17.1/rootdir/init.rc

Change-Id: Ie85744fc4c5c3a99f666d3b9dde98d60efa61418

--- a/rootdir/etc/init.device.rc
+++ b/rootdir/etc/init.device.rc
@@ -72,6 +72,17 @@ on boot
     chown system system /sys/devices/virtual/graphics/fb0/rgb
     chmod 664 /sys/devices/virtual/graphics/fb0/rgb
 
+    # for fingerprint calibration
+    chown system system /mnt/vendor/persist/qc_senseid/bg_estimation/bg_basis.dat
+    chown system system /mnt/vendor/persist/qc_senseid/bg_estimation/bg_small1_basis.dat
+    chown system system /mnt/vendor/persist/qc_senseid/bg_estimation/bg_small1_off_basis.dat
+    chown system system /mnt/vendor/persist/qc_senseid/bg_estimation/bg_small2_basis.dat
+    chown system system /mnt/vendor/persist/qc_senseid/bg_estimation/bg_small2_off_basis.dat
+
+on fs
+    # Set permissions for persist partition
+    mkdir /mnt/vendor/persist/qc_senseid 0700 system system
+
 on post-fs-data
     # Create directories for Fingerprint
     mkdir /data/misc/stargate 0770 system system
